# Integrated_E-Commerce_Vulnerabilities

./: .env  .env.json  .env.multi  NOTE.txt  README.md  ViewProd_Doubly_linked_list.py  binary_tree_realworld.py  booking_architecture_visualizer.py  breadth_microservices_queryAPI.py  crawler_config.json  custom_linked_list_viz.py  depth_microservice_posting_list_ingestion.py  documented_inverted_index_search.py  documented_linked_list_viz.py  documented_ttl_lru_cache.py  documented_web_crawler.py  double_link.py  enhanced_web_crawler.py  env.sh  external_sort_merge.py  first_arch.html  input.txt  integrated_ecommerce_vulnerabilities.html  inverted_index.py  inverted_index_search.py  json_config_client.py  k_way_merge_sort.py  main1.py  main2.py  mapper.py  merge_sort.py  multi_server_client.py  pyproject.toml  quick_sort.py  reducer.py  reducer_bucket.py  reducer_distributed_scale.py  reducer_streaming.py  requirements.txt  run_crawler.py  (+12 more)
